# neug

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  dev_and_test.md  neug-config-version.in.cmake  neug-config.in.cmake  nexg-config-version.in.cmake  nexg-config.in.cmake
examples/cpp/: CMakeLists.txt  simple_example.cc
extension/: CMakeLists.txt
extension/example_index/: CMakeLists.txt
extension/example_index/include/: example_index.h  example_index_rule.h  example_index_scan.h
extension/example_index/src/: example_index.cc  example_index_extension.cc  example_index_rule.cc  example_index_scan.cc
extension/gds/: CMakeLists.txt  Performance.md  README.md
extension/gds/benchmark/: README.md
extension/gds/docs/: gds-shortest-path-spec.md
extension/gds/include/: bfs.h  cdlp.h  gds_algo_function_collection.h  kcore.h  label_propagation.h  lcc.h  leiden.h  louvain.h  option_utils.h  page_rank.h  parallel_utils.h  personalized_pagerank.h  sssp.h  subgraph_utils.h  wcc.h
extension/gds/src/: bfs.cc  cdlp.cc  gds_algo_extension.cc  gds_algo_extension.cpp  kcore.cc  label_propagation.cc  label_propagation.cpp  lcc.cc  leiden.cc  louvain.cc  page_rank.cc  personalized_pagerank.cc  personalized_pagerank.cpp  sssp.cc  subgraph_utils.cc  wcc.cc
extension/httpfs/: CMakeLists.txt
extension/httpfs/include/: http_filesystem.h  s3_filesystem.h  s3_options.h
extension/httpfs/src/: http_filesystem.cc  s3_extension.cpp  s3_filesystem.cc  s3_options.cc
extension/httpfs/tests/: http_test.cc  http_test.cpp  s3_test.cpp
extension/include/json/: json_converter.h  json_dummy_function.h  json_scan_function.h  json_streaming_state.h  json_vfs_reader.h
extension/index_example/: CMakeLists.txt
extension/index_example/include/: int32_index.h  int32_index_rule.h  int32_index_scan.h
extension/index_example/src/: index_example_extension.cc  int32_index.cc  int32_index_rule.cc  int32_index_scan.cc
extension/json/: CMakeLists.txt
extension/json/include/: json_dummy_function.h  json_export_function.h  json_read_function.h  json_scan_function.h  json_streaming_state.h  json_vfs_reader.h
extension/leiden/: CMakeLists.txt
extension/louvain/: CMakeLists.txt
extension/parquet/: CMakeLists.txt
extension/pattern_matching/: CMakeLists.txt  README.md
extension/s3/: CMakeLists.txt  README.md  USAGE_EXAMPLE.md
extension/sample/: CMakeLists.txt  README.md  demo_sampled_match.py  triangle_pattern.json
extension/sampled_match/: CMakeLists.txt  README.md  demo_sampled_match.py  example_pattern.json
extension/test_out_of_tree/: test_out_of_tree_extension.cc
sampling/FaSTest/: CMakeLists.txt
src/: CMakeLists.txt  README.md
src/columnar/: CMakeLists.txt  data_chunk.cc  graph_types.cc  value.cc
src/common/: CMakeLists.txt  extra_type_info.cc  types.cc
src/compiler/: CMakeLists.txt
src/engines/: CMakeLists.txt  graph_db_service.cc  graph_db_service.h
src/execution/: CMakeLists.txt
src/main/: CMakeLists.txt  app_manager.cc  checkpoint_coordinator.cc  connection.cc  connection.h  connection_manager.cc  file_lock.cc  file_lock.h  neug_db.cc  neug_db.h  neug_db_session.cc  nexg_db.cc  nexg_db.h  query_processor.cc  query_processor.h  query_request.cc  query_result.cc  query_result.h  session.cc  transaction_manager.cc
src/neug/: CMakeLists.txt
src/otel/: CMakeLists.txt
src/planner/: CMakeLists.txt  dummy_graph_planner.cc  dummy_graph_planner.h  gopt_planner.cc  gopt_planner.h  graph_planner.h  jni_graph_planner.cc  jni_graph_planner.h
src/server/: CMakeLists.txt  brpc_http_hdl_mgr.cc  brpc_service_mgr.cc  neug_db_service.cc  neug_db_session.cc  session_pool.cc
src/storages/: CMakeLists.txt
src/transaction/: CMakeLists.txt  checkpoint_transaction.cc  compact_transaction.cc  insert_transaction.cc  read_transaction.cc  single_edge_insert_transaction.cc  single_vertex_insert_transaction.cc  timestamp_window.cc  transaction_manager.cc  undo_log.cc  update_timestamp_guard.cc  update_transaction.cc  version_manager.cc
src/utils/: CMakeLists.txt  allocators.h  app_utils.cc  app_utils.h  arrow_array_builder.cc  arrow_utils.cc  arrow_utils.h  bitset.cc  bolt_utils.cc  encoder.cc  exception.h  file_utils.cc  http_handler_manager.h  id_indexer.h  indexers.h  mmap_array.h  mmap_vector.h  pb_utils.cc  pb_utils.h  pt_indexer.h  result.cc  result.h  service_utils.cc  service_utils.h  string_utils.cc  string_utils.h  top_n_generator.h  yaml_utils.cc  yaml_utils.h
tests/extension/: CMakeLists.txt  json_test.cpp
tests/rt_mutable_graph/: CMakeLists.txt  immutable_csr_test.cc  modern_graph_multiple_props_edge_import.yaml  multiple_props_edge_test.cc  string_edge_property_test.cc  test_acid.cc  test_acid_cypher.cc  test_ddl.cc  test_delete_columns.cc  test_empty_graph.cc  test_export.cc  test_gopt_planner.cc  test_open_graph.cc  test_run_query.cc  test_update_transaction.cc
tests/unittest/: CMakeLists.txt  README.md  alter_property_test.cc  logical_delete_test.cc  schema_test.cc  test_acid.cc  test_call_params.cc  test_checkpoint.cc  test_column.cc  test_connection.cc  test_csr_batch_ops.cc  test_csr_stream_ops.cc  test_db_svc.cc  test_ddl.cc  test_edge_table.cc  test_explain_profile.cpp  test_export.cc  test_extension.cc  test_indexer.cc  test_modification_tracker.cc  test_open_graph.cc  test_query_result.cc  test_run_query.cc  test_set_property.cc  test_version_manager.cc  test_vertex_table.cc  utils.h  vertex_table_benchmark.cc
tools/: CMakeLists.txt
tools/benchmark/: README.md
tools/java/: USAGE.md  pom.xml
tools/java_driver/: USAGE.md  pom.xml
tools/nodejs_bind/: .gitignore  CMakeLists.txt  Makefile  README.md  package-lock.json  package.json
tools/python_bind/: CMakeLists.txt  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test_louvain_check.py  test_louvain_properties.py
tools/shell/: README.md  pyproject.toml  setup.cfg  setup.py
tools/utils/: CMakeLists.txt  bulk_loader.cc
(+6980 files in other folders)
